@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter.activities"
-    android:versionCode="64"
-    android:versionName="2.0.64" >
+    android:versionCode="68"
+    android:versionName="2.0.68" >
 
     <uses-sdk
         android:minSdkVersion="11"
